Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-75951

wasm: mouse up event sometimes is not generated

    XMLWordPrintable

Details

    • WebAssembly
    • df9f9fb368cc2dc17c57030e1df51804c2f2265d (qt/qtbase/5.13)

    Description

      Occasionally emscripten does not respond with a proper mouse up event.

      This seems to effect QDialog windows that are not maximized/full screen.

      When I grab the window to move it around, sometimes the window does not  move as fast as the mouse. If I let go of the mouse button when it is not directly under the pointer, emscripten does not send mouse the mouse up event. This means I can move the window around just by moving the mouse.

      Attachments

        For Gerrit Dashboard: QTBUG-75951
        # Subject Branch Project Status CR V

        Activity

          People

            lpotter Lorn Potter
            lpotter Lorn Potter
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes